# release-please-single-pr

./: README.md
.github/release-please/: config.json  manifest.json
.github/workflows/: pr.yaml  release.yaml
core/: CHANGELOG.md  Cargo.toml
core/core-multiple-1/: Cargo.toml
core/core-multiple-1/src/: lib.rs
core/core-multiple-2/: Cargo.toml
core/core-multiple-3/: Cargo.toml
prover/: CHANGELOG.md  Cargo.toml
prover/prover-multiple-1/: Cargo.toml
prover/prover-multiple-1/src/: main.rs
prover/prover-multiple-2/: Cargo.toml
prover/prover-multiple-3/: Cargo.toml
zkstack/: CHANGELOG.md  Cargo.toml
zkstack/zkstack_lib_1/: Cargo.toml
