[workspace]
resolver = "2"
members = [
    "prover-multiple-1",
    "prover-multiple-2",
    "prover-multiple-3"
]

[workspace.dependencies]
prover-multiple-3 = { version = "0.1.0", path = "prover-multiple-3" }
core-multiple-1 = { version = "0.1.0", path = "../core/core-multiple-1" }

[workspace.package]
version = "0.1.0" # x-release-please-version
authors = [
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
description = "Test release-please prover multiple."
license = "MIT OR Apache-2.0"
edition = "2021"
